Ajout du header : titre + bouton thème

--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portail d’événements pour une association.</title>
+    <title>Portail d'événements pour une association.</title>
+
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
   </head>
-  <body></body>
+
+  <body>
+    <!-- HEADER -->
+    <header class="top-bar">
+      <h1>Portail d'événements</h1>
+      <button id="theme-toggle">Mode sombre</button>
+    </header>
+  </body>
 </html>
